--- a/components/qewufdi17-python/overlays/development/deployment-patch.yaml
+++ b/components/qewufdi17-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qewufdi17-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-6211fcbaa9.budf.p3.openshiftapps.com/rhtap/rhtap-qe:7f2843cd1eb61cb3d92456f0dddf04587444eb46@sha256:bc6397408d5c5467364acb5022cea5a315b351811ee6811d5b02aee25ee519e4
+          name: container-image
